Packages/Dojo/Runtime/bindings/dojo.h

typedef enum ComparisonOperator {
  Eq,
  Neq,
  Gt,
  Gte,
  Lt,
  Lte,
} ComparisonOperator;
typedef enum LogicalOperator {
  And,
  Or,
} LogicalOperator;
typedef struct CArray______c_char {
  const char **data;
  uintptr_t data_len;
} CArray______c_char;
typedef struct KeysClause {
  const char *model;
  struct CArray______c_char keys;
} KeysClause;
typedef struct FieldElement {
  uint8_t data[32];
} FieldElement;
typedef struct Primitive {
  Primitive_Tag tag;
  union {
    struct {
      uint8_t u8;
    };
    struct {
      uint16_t u16;
    };
    struct {
      uint32_t u32;
    };
    struct {
      uint64_t u64;
    };
    struct {
      uint8_t u128[16];
    };
    struct {
      uint64_t u256[4];
    };
    struct {
      uint32_t u_size;
    };
    struct {
      bool p_bool;
    };
    struct {
      struct FieldElement felt252;
    };
    struct {
      struct FieldElement class_hash;
    };
    struct {
      struct FieldElement contract_address;
    };
  };
} Primitive;
typedef struct Member {
  const char *name;
  struct Ty *ty;
  bool key;
} Member;
typedef struct CArray_Member {
  struct Member *data;
  uintptr_t data_len;
} CArray_Member;
typedef struct Struct {
  const char *name;
  struct CArray_Member children;
} Struct;
typedef struct EnumOption {
  const char *name;
  struct Ty *ty;
} EnumOption;
typedef struct CArray_EnumOption {
  struct EnumOption *data;
  uintptr_t data_len;
} CArray_EnumOption;
typedef struct Enum {
  const char *name;
  uint8_t option;
  struct CArray_EnumOption options;
} Enum;
typedef struct CArray_Ty {
  struct Ty *data;
  uintptr_t data_len;
} CArray_Ty;
typedef enum Ty_Tag {
  TyPrimitive,
  TyStruct,
  TyEnum,
  TyTuple,
} Ty_Tag;
typedef struct Ty {
  Ty_Tag tag;
  union {
    struct {
      struct Primitive ty_primitive;
    };
    struct {
      struct Struct ty_struct;
    };
    struct {
      struct Enum ty_enum;
    };
    struct {
      struct CArray_Ty ty_tuple;
    };
  };
} Ty;
typedef enum COption_____Ty_Tag {
  Some_____Ty,
  None_____Ty,
} COption_____Ty_Tag;
typedef struct COption_____Ty {
  COption_____Ty_Tag tag;
  union {
    struct {
      struct Ty *some;
    };
  };
} COption_____Ty;
typedef struct Model {
  const char *name;
  struct CArray_Member members;
} Model;
typedef struct CArray_Model {
  struct Model *data;
  uintptr_t data_len;
} CArray_Model;
typedef struct Entity {
  struct FieldElement hashed_keys;
  struct CArray_Model models;
} Entity;
typedef struct CArray_u8 {
  uint8_t *data;
  uintptr_t data_len;
} CArray_u8;
typedef struct Value {
  struct Primitive primitive_type;
  struct ValueType value_type;
} Value;
typedef struct MemberClause {
  const char *model;
  const char *member;
  enum ComparisonOperator operator_;
  struct Value value;
} MemberClause;
typedef struct CArray_Clause {
  struct Clause *data;
  uintptr_t data_len;
} CArray_Clause;
typedef struct CompositeClause {
  const char *model;
  enum LogicalOperator operator_;
  struct CArray_Clause clauses;
} CompositeClause;
typedef enum Clause_Tag {
  Keys,
  CMember,
  Composite,
} Clause_Tag;
typedef struct Clause {
  Clause_Tag tag;
  union {
    struct {
      struct KeysClause keys;
    };
    struct {
      struct MemberClause c_member;
    };
    struct {
      struct CompositeClause composite;
    };
  };
} Clause;
typedef enum COption_Clause_Tag {
  Some_Clause,
  None_Clause,
} COption_Clause_Tag;
typedef struct COption_Clause {
  COption_Clause_Tag tag;
  union {
    struct {
      struct Clause some;
    };
  };
} COption_Clause;
typedef struct CArray_KeysClause {
  struct KeysClause *data;
  uintptr_t data_len;
} CArray_KeysClause;
typedef struct CArray_FieldElement {
  struct FieldElement *data;
  uintptr_t data_len;
} CArray_FieldElement;
typedef struct ModelMetadata {
  struct Ty schema;
  const char *name;
  uint32_t packed_size;
  uint32_t unpacked_size;
  struct FieldElement class_hash;
  struct CArray_FieldElement layout;
} ModelMetadata;
typedef struct CHashItem______c_char__ModelMetadata {
  const char *key;
  struct ModelMetadata value;
} CHashItem______c_char__ModelMetadata;
typedef struct Call {
  const char *to;
  const char *selector;
  struct CArray_FieldElement calldata;
} Call;