Packages/Dojo/Runtime/bindings/client/dojo.gen.cs


        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray_EnumOption
        {
            [FieldOffset(0)] // size = 8
            public EnumOption* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray_FieldElement
        {
            [FieldOffset(0)] // size = 8
            public FieldElement* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray_KeysClause
        {
            [FieldOffset(0)] // size = 8
            public KeysClause* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray_Member
        {
            [FieldOffset(0)] // size = 8
            public Member* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray_Model
        {
            [FieldOffset(0)] // size = 8
            public Model* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray_Ty
        {
            [FieldOffset(0)] // size = 8
            public Ty* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray______c_char
        {
            [FieldOffset(0)] // size = 8
            public CString* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray_u8
        {
            [FieldOffset(0)] // size = 8
            public byte* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 120, Pack = 8)]
        public struct CHashItem______c_char__ModelMetadata
        {
            [FieldOffset(0)] // size = 8
            public CString _key;

            public string key
            {
                get
                {
                    return CString.ToString(_key);
                }
                set
                {
                    _key = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 112
            public ModelMetadata value;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 104, Pack = 8)]
        public struct COption_Clause
        {
            [FieldOffset(0)] // size = 4
            public COption_Clause_Tag tag;

            [FieldOffset(8)] // size = 96
            public Clause some;
        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 96, Pack = 8)]
        public struct COption_Clause_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 96
            public Clause some;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 96, Pack = 8)]
        public struct COption_Clause_ANONYMOUS_FIELD1_ANONYMOUS_FIELD0
        {
            [FieldOffset(0)] // size = 96
            public Clause some;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct COption_____Ty
        {
            [FieldOffset(0)] // size = 4
            public COption_____Ty_Tag tag;

            [FieldOffset(8)] // size = 8
            public Ty* _some;

            public Ty some
            {
                get
                {
                    return *_some;
                }
            }
        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 8, Pack = 8)]
        public struct COption_____Ty_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 8
            public Ty* _some;

            public Ty some
            {
                get
                {
                    return *_some;
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 8, Pack = 8)]
        public struct COption_____Ty_ANONYMOUS_FIELD1_ANONYMOUS_FIELD0
        {
            [FieldOffset(0)] // size = 8
            public Ty* _some;

            public Ty some
            {
                get
                {
                    return *_some;
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct Call
        {
            [FieldOffset(0)] // size = 8
            public CString _to;

            public string to
            {
                get
                {
                    return CString.ToString(_to);
                }
                set
                {
                    _to = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 8
            public CString _selector;

            public string selector
            {
                get
                {
                    return CString.ToString(_selector);
                }
                set
                {
                    _selector = CString.FromString(value);
                }
            }

            [FieldOffset(16)] // size = 16
            public CArray_FieldElement _calldata;

            public Span<FieldElement> calldata
            {
                get
                {
                    fixed (Call* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_calldata.data, (int)@this->_calldata.data_len);
                        return span;
                    }
                }

                set
                {

                    _calldata = new CArray_FieldElement();
                    _calldata.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _calldata.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 96, Pack = 8)]
        public struct Clause
        {
            [FieldOffset(0)] // size = 4
            public Clause_Tag tag;

            [FieldOffset(8)] // size = 24
            public KeysClause keys;

            [FieldOffset(8)] // size = 88
            public MemberClause c_member;

            [FieldOffset(8)] // size = 32
            public CompositeClause composite;
        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 88, Pack = 8)]
        public struct Clause_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 24
            public KeysClause keys;

            [FieldOffset(0)] // size = 88
            public MemberClause c_member;

            [FieldOffset(0)] // size = 32
            public CompositeClause composite;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 24, Pack = 8)]
        public struct Clause_ANONYMOUS_FIELD1_ANONYMOUS_FIELD0
        {
            [FieldOffset(0)] // size = 24
            public KeysClause keys;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 88, Pack = 8)]
        public struct Clause_ANONYMOUS_FIELD1_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 88
            public MemberClause c_member;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct Clause_ANONYMOUS_FIELD1_ANONYMOUS_FIELD2
        {
            [FieldOffset(0)] // size = 32
            public CompositeClause composite;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct CompositeClause
        {
            [FieldOffset(0)] // size = 8
            public CString _model;

            public string model
            {
                get
                {
                    return CString.ToString(_model);
                }
                set
                {
                    _model = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 4
            public LogicalOperator operator_;

            [FieldOffset(16)] // size = 16
            public CArray_Clause _clauses;

            public Span<Clause> clauses
            {
                get
                {
                    fixed (CompositeClause* @this = &this)
                    {
                        var span = new Span<Clause>(@this->_clauses.data, (int)@this->_clauses.data_len);
                        return span;
                    }
                }

                set
                {

                    _clauses = new CArray_Clause();
                    _clauses.data_len = (UIntPtr)value.Length;
                    fixed (Clause* ptr = value)
                    {
                        _clauses.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 48, Pack = 8)]
        public struct Entity
        {
            [FieldOffset(0)] // size = 32
            public FieldElement hashed_keys;

            [FieldOffset(32)] // size = 16
            public CArray_Model _models;

            public Span<Model> models
            {
                get
                {
                    fixed (Entity* @this = &this)
                    {
                        var span = new Span<Model>(@this->_models.data, (int)@this->_models.data_len);
                        return span;
                    }
                }

                set
                {

                    _models = new CArray_Model();
                    _models.data_len = (UIntPtr)value.Length;
                    fixed (Model* ptr = value)
                    {
                        _models.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct Enum
        {
            [FieldOffset(0)] // size = 8
            public CString _name;

            public string name
            {
                get
                {
                    return CString.ToString(_name);
                }
                set
                {
                    _name = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 1
            public byte option;

            [FieldOffset(16)] // size = 16
            public CArray_EnumOption _options;

            public Span<EnumOption> options
            {
                get
                {
                    fixed (Enum* @this = &this)
                    {
                        var span = new Span<EnumOption>(@this->_options.data, (int)@this->_options.data_len);
                        return span;
                    }
                }

                set
                {
